Added back button for game to return to main menu , but I have to work at style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceDogle - Arcade Game</title>
     <link rel="stylesheet" href="../style/game.css">
-    <link rel="stylesheet" href="../style/menu.css"
+    <link rel="stylesheet" href="../style/menu.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -35,6 +35,7 @@
 
         <div id="gameScreen">
             <canvas id="gameCanvas" width="800" height="600"></canvas>
+            <button id="backButton" class="backButton">← Back</button>
             <div class="gameUI">
                 <div class="uiElement">Score: <span id="scoreValue">0</span></div>
                 <div class="uiElement">Lives: <span id="livesValue">3</span></div>
