Implemented best score system

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="gameUI">
                 <div class="uiElement">Score: <span id="scoreValue">0</span></div>
                 <div class="uiElement">Lives: <span id="livesValue">3</span></div>
+                <div class="uiElement">Best: <span id="bestScoreValue">0</span></div>
                 <div class="uiElement">Player: <span id="playerName">Guest</span></div>
             </div>
             <div id="gameOverScreen">
