--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
             <canvas id="gameCanvas" width="800" height="600"></canvas>
             <button id="backButton" class="backButton">← Back</button>
             
-            <button id="reviveButton" class="reviveButton">REVIVE (2)</button>
-            
             <div class="gameUI">
                 <div class="uiElement">Score: <span id="scoreValue">0</span></div>
                 <div class="uiElement">Lives: <span id="livesValue">3</span></div>
@@ -51,6 +49,7 @@
                 <div class="gameOverText">GAME OVER</div>
                 <div class="finalScore">Score: <span id="finalScore">0</span></div>
                 <button id="restartButton" class="arcadeButton">PLAY AGAIN</button>
+                <button id="reviveGameOverButton" class="arcadeButton revive-gameover">REVIVE (<span id="reviveCount">2</span>)</button>
             </div>
         </div>
     </div>
