--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="menuButtons">
                 <button id="playButton" class="arcadeButton">PLAY</button>
                 <div class="buttonRow">
-                    <button id="resetButton" class="smallButton">Reset</button>
+                    <button id="resetButton" class="smallButton">Refresh</button>
                     <button id="settingsButton" class="smallButton">Settings</button>
                     <button id="extraButton" class="smallButton">Bonus</button>
                 </div>
