Made last fixes

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="menuButtons">
                 <button id="playButton" class="arcadeButton">PLAY</button>
                 <div class="buttonRow">
-                    <button id="resetButton" class="smallButton">Refresh</button>
-                    <button id="settingsButton" class="smallButton">Settings</button>
-                    <button id="extraButton" class="smallButton">Bonus</button>
+                    <button id="refreshButton" class="smallButton">Refresh</button>
+                    <button id="audioButton" class="smallButton">Audio: ON</button>
+                    <button id="moonshotButton" class="smallButton">Moonshot</button>
                 </div>
         
                 <div class="usernameSection">
