--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <script src="../script/script.js"></script>
-    <script src="../script/username.js"></script>
+    <script src="./script/script.js"></script>
+    <script src="./script/username.js"></script>
 </body>
 </html>
